ros2_prj/ros2_topic_ws/log/build_2026-04-30_10-17-23/topic/stderr.log
In file included from /opt/ros/jazzy/include/rclcpp/rclcpp/copy_all_parameter_values.hpp:27,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/rclcpp.hpp:171,
                 from /home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_topic_ws/src/topic/src/sub.cpp:1:
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_topic_ws/src/topic/src/sub.cpp: In constructor ‘subNode::subNode(std::string)’:
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_topic_ws/src/topic/src/sub.cpp:7:37: error: ‘node’ was not declared in this scope; did you mean ‘Node’?
    7 |                         RCLCPP_INFO(node->get_logger(), "sub_node created!");
      |                                     ^~~~
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_topic_ws/src/topic/src/sub.cpp:7:25: error: template argument 1 is invalid
    7 |                         RCLCPP_INFO(node->get_logger(), "sub_node created!");
      |                         ^~~~~~~~~~~
gmake[2]: *** [CMakeFiles/sub_node.dir/build.make:76: CMakeFiles/sub_node.dir/src/sub.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/sub_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
